--- a/IRF_Beadando/IRF_Beadando/IRF_Beadando.csproj
+++ b/IRF_Beadando/IRF_Beadando/IRF_Beadando.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,6 +46,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>IRF_Beadando.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
@@ -79,19 +97,27 @@
     <Compile Include="DolgozoForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DolgozoForm.Designer.cs" />
+    <Compile Include="DolgozoForm.Designer.cs">
+      <DependentUpon>DolgozoForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="JelszoModositasForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="JelszoModositasForm.Designer.cs" />
+    <Compile Include="JelszoModositasForm.Designer.cs">
+      <DependentUpon>JelszoModositasForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LoginForm.Designer.cs" />
+    <Compile Include="LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs" />
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -110,10 +136,24 @@
     <Compile Include="Munkakor.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="MunkavegzesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MunkavegzesForm.Designer.cs">
+      <DependentUpon>MunkavegzesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TevekenysegForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TevekenysegForm.Designer.cs">
+      <DependentUpon>TevekenysegForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MunkakorForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MunkakorForm.Designer.cs" />
+    <Compile Include="MunkakorForm.Designer.cs">
+      <DependentUpon>MunkakorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Munkavegzes.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -131,6 +171,10 @@
     <EmbeddedResource Include="JelszoModositasForm.resx" />
     <EmbeddedResource Include="LoginForm.resx" />
     <EmbeddedResource Include="MainForm.resx" />
+    <EmbeddedResource Include="MunkavegzesForm.resx">
+      <DependentUpon>MunkavegzesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TevekenysegForm.resx" />
     <EmbeddedResource Include="MunkakorForm.resx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -187,6 +231,18 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
