absztrakt osztaly az exportalashoz

--- a/IRF_Beadando/IRF_Beadando/IRF_Beadando.csproj
+++ b/IRF_Beadando/IRF_Beadando/IRF_Beadando.csproj
@@ -137,6 +137,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="MunkavegzesEpito.cs" />
+    <Compile Include="MunkavegzesExpAbstractClass.cs" />
     <Compile Include="MunkavegzesForm.cs">
       <SubType>Form</SubType>
     </Compile>
